# estimate_simulation_accuracy

./: .gitignore  BRDF.h  CMakeLists.txt  CsvData.h  Scene.h  main.cpp  plot_single_result.py  read_csv.h  simulate_result.py
spectra/: spectra_data.cpp  spectra_data.h
visualizse/: plot_RGB_hist.py  plot_ring_png.py  plot_ring_single.py  plot_single_result.py
